feat: bundle Java policy core in Windows pilot